# discomcp

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  dist-workspace.toml  glama.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: METRICS.md
crates/discomcp-cli/: Cargo.toml
crates/discomcp-cli/src/: main.rs
crates/discomcp-core/: Cargo.toml
crates/discomcp-core/src/: artifacts.rs  catalogue.rs  config.rs  engine.rs  envelope.rs  error.rs  inference.rs  lib.rs  mcp.rs  model.rs  normalization.rs  policy.rs  reasoning.rs  redaction.rs
crates/discomcp-core/src/mcp/: http.rs  oauth.rs  stdio.rs
crates/discomcp-core/tests/: stdio_transport.rs
crates/discomcp-server/: Cargo.toml
crates/discomcp-server/src/: lib.rs  stdio.rs
crates/discomcp-server/tests/: serve_stdio.rs
docs/: ARCHITECTURE.md  EXTENDING.md  THREAT_MODEL.md
examples/: config.toml
examples/profiles/mock-collection/: AGENTS.md  SKILL.md  capability-profile.json  docs-index.json  docs-summary.md  evals.yml  exploration-plan.json  hypotheses.json  mcp-quality.json  observations.jsonl  onboarding-report.md  operational-model.json  playbooks.md  probe-log.jsonl  profile-metadata.json  raw-discovery.json  relationships.json  relationships.md  sample-shapes.json  samples.redacted.json  tool-cards.json  tool-catalogue.json  tool-map.md  workspace-map.md  workspace-model.json
