[workspace]
members = [
    "crates/discomcp-core",
    "crates/discomcp-cli",
    "crates/discomcp-server",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["DiscoMCP Contributors"]
repository = "https://github.com/ieranama/discomcp"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
