[package]
name = "discomcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for safety-first MCP profiling with DiscoMCP"

[[bin]]
name = "discomcp"
path = "src/main.rs"

[dependencies]
clap.workspace = true
discomcp-core = { path = "../discomcp-core" }
discomcp-server = { path = "../discomcp-server" }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
