[package]
name = "discomcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Public MCP-server surface for DiscoMCP"

[dependencies]
discomcp-core = { path = "../discomcp-core" }
serde.workspace = true

[lints]
workspace = true
